--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     container_name: api-auth
     environment:
       - DATABASE_URL=postgres://cloveuser:clovepassword@postgres:5432/clovedb?sslmode=disable
+      - SIGV4_MASTER_SECRET=ac983692bf1eb2fb4d32d41d5d518f9f55b867b45aad1df9a7519d7b633f00be
     ports:
       - "8081:8080"
       - "50051:50051"
