--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,10 @@ http {
         server api-portal-organizations:8080;
     }
 
+    upstream api-minio {
+        server api-minio:8080;
+    }
+
     server {
         listen 80;
         server_name localhost;
@@ -40,6 +44,23 @@ http {
         # API Portal Organizations routes
         location /api/organizations {
             proxy_pass http://api-portal-organizations;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # API MinIO routes (S3-compatible storage)
+        location /api/buckets {
+            proxy_pass http://api-minio;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/bucket {
+            proxy_pass http://api-minio;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
