--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,10 @@ http {
         server api-minio:8080;
     }
 
+    upstream api-keys {
+        server api-keys:8080;
+    }
+
     server {
         listen 80;
         server_name localhost;
@@ -26,6 +30,14 @@ http {
         # API Auth routes
         location /api/auth {
             proxy_pass http://api-auth;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/keys {
+            proxy_pass http://api-keys;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
